Updated bulkhead profiles

--- a/GameData/HabTech2/Parts/Trusses/ht2_AMS.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_AMS.cfg
@@ -24,7 +24,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1100
 	skinMaxTemp = 1200
-	bulkheadProfiles = size1 size2
+	bulkheadProfiles = size2
 	tags = ISS Station Habitation habtech science spectrometer alpha magnetic research
 
 	MODEL
