--- a/GameData/HabTech2/Parts/Trusses/ht2_MTS_adapter.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_MTS_adapter.cfg
@@ -27,7 +27,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 10
 	maxTemp = 1000
-	bulkheadProfiles = size1
+	bulkheadProfiles = size00, srf
 	tags = HabTech, habitation, dock, coupler, port, ISS, station, truss, structural, angled
 	stagingIcon = DECOUPLER_VERT
 
