--- a/GameData/HabTech2/Parts/Trusses/ht2_TTS_standoff_angle.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_TTS_standoff_angle.cfg
@@ -25,7 +25,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 10
 	maxTemp = 1000
-	bulkheadProfiles = size0, srf
+	bulkheadProfiles = srf
 	tags = HabTech, habitation, dock, coupler, port, ISS, station, truss, structural, compact
 	stagingIcon = DECOUPLER_VERT
 
