--- a/GameData/HabTech2/Parts/Greebles/ht2_ESP.cfg
+++ b/GameData/HabTech2/Parts/Greebles/ht2_ESP.cfg
@@ -25,7 +25,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 1100
-	bulkheadProfiles = size1
+	bulkheadProfiles = srf
 	tags = ISS Station Habitation habtech adapter join platform structural stowage storage flat panel grid
 
 	MODEL
