--- a/GameData/HabTech2/Parts/Trusses/ht2_ATA.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_ATA.cfg
@@ -25,7 +25,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 1100
-	bulkheadProfiles = size1
+	bulkheadProfiles = srf
 	tags = ISS Station Habitation habtech stowage store tank thermal radiator truss resource ammonia
 
 	MODEL
