--- a/GameData/HabTech2/Parts/Trusses/ht2_SAW_v2.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_SAW_v2.cfg
@@ -24,7 +24,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 1200
-	bulkheadProfiles = size2
+	bulkheadProfiles = srf
 	tags = ISS habtech solar array SAW wing panel
 
 	MODEL
