--- a/GameData/HabTech2/Parts/Trusses/ht2_TTS_circle.cfg
+++ b/GameData/HabTech2/Parts/Trusses/ht2_TTS_circle.cfg
@@ -25,7 +25,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 10
 	maxTemp = 1000
-	bulkheadProfiles = size1, size0
+	bulkheadProfiles = size0p5
 	tags = HabTech, habitation, dock, coupler, port, ISS, station, truss, structural, circle
 	stagingIcon = DECOUPLER_VERT
 
