Updated bulkhead profiles

--- a/GameData/HabTech2/Parts/Modules/ht2_JEM_EF.cfg
+++ b/GameData/HabTech2/Parts/Modules/ht2_JEM_EF.cfg
@@ -26,7 +26,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 1000
 	skinMaxTemp = 1100
-	bulkheadProfiles = size1
+	bulkheadProfiles = srf
 	tags = ISS Station Habitation habtech adapter join platform structural JEM kibo Exposed Facility EF
 
 	MODEL
