--- a/GameData/HabTech2/Parts/Modules/ht2_JEM_armMount.cfg
+++ b/GameData/HabTech2/Parts/Modules/ht2_JEM_armMount.cfg
@@ -25,7 +25,7 @@ PART
 	angularDrag = 0.5
 	crashTolerance = 10
 	maxTemp = 1000
-	bulkheadProfiles = size00, srf
+	bulkheadProfiles = srf
 	tags = HabTech, ISS, JEM, Kibo, connect, attach, Canadarm, robot, arm, adapter, mount
 	stagingIcon = DECOUPLER_VERT
 
