Updated VABO configs

--- a/GameData/HabTech2/Patches/VABOrganizer/VABO_ht2.cfg
+++ b/GameData/HabTech2/Patches/VABOrganizer/VABO_ht2.cfg
@@ -14,7 +14,7 @@
 	}
 }
 
-@PART[ht2_cupola*]:NEEDS[VABOrganizer]
+@PART[ht2_moduleCupola*]:NEEDS[VABOrganizer]
 {
 	%VABORGANIZER
 	{
@@ -184,5 +184,37 @@
 	%VABORGANIZER
 	{
 		%organizerSubcategory = relay
+	}
+}
+
+@PART[ht2_SGANT_servo|ht2_SGANT_boomSwing]:NEEDS[VABOrganizer]
+{
+	%VABORGANIZER
+	{
+		%organizerSubcategory = hinges
+	}
+}
+
+@PART[ht2_SGANT_boomFixed]:NEEDS[VABOrganizer]
+{
+	%VABORGANIZER
+	{
+		%organizerSubcategory = tubes
+	}
+}
+
+@PART[ht2_JEM_NR|ht2_JEM_SCI]:NEEDS[VABOrganizer]
+{
+	%VABORGANIZER
+	{
+		%organizerSubcategory = scienceStorage
+	}
+}
+
+@PART[ht2_handrail]:NEEDS[VABOrganizer]
+{
+	%VABORGANIZER
+	{
+		%organizerSubcategory = ladders
 	}
 }
