--- a/GameData/HabTech2/Patches/PayloadRetentionSystem.cfg
+++ b/GameData/HabTech2/Patches/PayloadRetentionSystem.cfg
@@ -1,5 +1,5 @@
 
-@PART[ht2_MPLM]:NEEDS[TrunnionPort]
+@PART[ht2_MPLM]:NEEDS[PayloadRetentionSystemNext]
 {
 	MODEL
 	{
@@ -19,7 +19,7 @@
 	}
 }
 
-@PART[ht2_MPLM_half]:NEEDS[TrunnionPort]
+@PART[ht2_MPLM_half]:NEEDS[PayloadRetentionSystemNext]
 {
 	MODEL
 	{
